Add support for JDK 8 (#138)